# AVSamples

app/: build.gradle
app/src/androidTest/java/com/av/samples/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_decode.c  audio_decode.h  constant.h  ff_audio_decoder.c  ff_audio_decoder.h  frame_queue.c  frame_queue.h  gl_renderer.c  gl_renderer.h  log.h  media_jni.c  message_queue.c  message_queue.h  msg_def.h  native-lib.cpp  rplayer.c  rplayer.h  segment_queue.c  segment_queue.h  sei_parser.c  sei_parser.h  transcode.c  transcode.h  video_convert_yuv.c  video_convert_yuv.h  video_split.c  video_split.h  video_split_yuv.c  video_split_yuv.h  xplayer.c  xplayer.h  yuv_player.c  yuv_player.h
app/src/main/java/com/av/samples/: FFTranscode.java  MainActivity.java  PlayerActivity.java  PreviewPlayer.java  PreviewPlayerActivity.java  RecordSession.java  ReverseEffect.java  ReverseEffectActivity.java  ReversePlayer.java  ReversePlayerActivity.java  Transcode.java  XPlayer.java  YUVPlayer.java  YUVPlayerActivity.java
app/src/main/java/com/av/samples/base/: GLTextureInputRenderer.java  GLTextureOutputRenderer.java
app/src/main/java/com/av/samples/capture/video/: CameraCapture.java  ICameraCapture.java
app/src/main/java/com/av/samples/common/: Constants.java  Status.java
app/src/main/java/com/av/samples/decoder/: AudioDecoder.java  FFAudioDecoder.java
app/src/main/java/com/av/samples/demux/: SeiParser.java  VideoSplit.java
app/src/main/java/com/av/samples/gles/: EglCore.java  EglSurfaceBase.java  GLRenderThread.java  GLRenderer.java  GlUtil.java  OffscreenSurface.java  WindowSurface.java
app/src/main/java/com/av/samples/output/: MediaVideoView.java
app/src/main/java/com/av/samples/utils/: ZipUtils.java
app/src/main/res/layout/: activity_main.xml  activity_player.xml  activity_preview_player.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/av/samples/: ExampleUnitTest.java
